--- a/src/Analysis.ipynb
+++ b/src/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -12,8 +12,8 @@
     "import pandas as pd\n",
     "import matplotlib\n",
     "import numpy as np\n",
-    "from scipy.stats import binom, chisquare, chi2\n",
-    "\n",
+    "from scipy.stats import binom, chisquare, chi2, binom\n",
+    "import scipy\n",
     "wd = os.path.dirname(os.getcwd())"
    ]
   },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 115,
    "outputs": [
     {
      "name": "stdout",
@@ -261,6 +261,273 @@
    "cell_type": "markdown",
    "source": [
     "The Chi Square test statistic is less than the significant value at a .05% confidence level, and the p-value is greater than .05. Thus, we fail to reject the null hypothesis that the distirbution of students infected on day 1 is distributed as binomial(30, .02)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Question 2\n",
+    "What is the expected number of kids that Tommy infects on Day 1?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The expected number of students Tommy infects on day one can be estimated using the simulation, by simply taking the average number of students infected on day 1 (where day 0 is the first day that Tommy came to school) across all trials. Note, this value includes Tommy himself as he is also infected on Day 1."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of students infected on day 1: 1.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "simulated_mean = day_1_df['contagious'].mean()\n",
+    "print(f'Average number of students infected on day 1: {simulated_mean}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This can also be calculated analytically, by using the expected value formula for a binomial distribution:\n",
+    "$$\n",
+    "E[X] = np\n",
+    "$$\n",
+    "\n",
+    "Where n is the number of students and p is the probability of tommy infecting other students. Note, this value represent the new infections, so to include tommy we must add 1"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected value of students infected on day 1: 1.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "true_mean = 30 * .02 + 1\n",
+    "print(f'Expected value of students infected on day 1: {true_mean}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "outputs": [],
+   "source": [
+    "day_2_df, day_2_observed = get_infected_count(2, no_mask)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2.4593"
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_2_df['infected'].mean()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    contagious  count  percent\n0          1.0   3080   0.3080\n1          2.0   2903   0.2903\n2          3.0   1961   0.1961\n3          4.0   1094   0.1094\n4          5.0    558   0.0558\n5          6.0    240   0.0240\n6          7.0    116   0.0116\n7          8.0     31   0.0031\n8          9.0     13   0.0013\n9         10.0      3   0.0003\n10        11.0      1   0.0001",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>contagious</th>\n      <th>count</th>\n      <th>percent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>3080</td>\n      <td>0.3080</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>2903</td>\n      <td>0.2903</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3.0</td>\n      <td>1961</td>\n      <td>0.1961</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.0</td>\n      <td>1094</td>\n      <td>0.1094</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.0</td>\n      <td>558</td>\n      <td>0.0558</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6.0</td>\n      <td>240</td>\n      <td>0.0240</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7.0</td>\n      <td>116</td>\n      <td>0.0116</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8.0</td>\n      <td>31</td>\n      <td>0.0031</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9.0</td>\n      <td>13</td>\n      <td>0.0013</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10.0</td>\n      <td>3</td>\n      <td>0.0003</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>11.0</td>\n      <td>1</td>\n      <td>0.0001</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_2_observed"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Question 3\n",
+    "What is the expected number of kids that are infected by Day 2 (you can\n",
+    "count Tommy if you want)?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def calc_exposure_probability(num_students_infected):\n",
+    "    infectiousness_rate = .02\n",
+    "    infected_students = [1-infectiousness_rate for i in range(num_students_infected)]\n",
+    "    students = infected_students\n",
+    "    exposure = 1 - math.prod(students)\n",
+    "    return exposure\n",
+    "\n",
+    "def day_2_infected_prob_given_day_1(day_2_infected, day_1_infected):\n",
+    "    susceptible_students = 30-day_1_infected\n",
+    "    exposure = calc_exposure_probability(day_1_infected+1)\n",
+    "    day_2_prob = binom.pmf(k=day_2_infected,n=susceptible_students,p=exposure)\n",
+    "    return day_2_prob\n",
+    "\n",
+    "def cum_prob_day_2(num_students):\n",
+    "    probability_list = []\n",
+    "    for s in range(num_students+1):\n",
+    "        day_1 = num_students-s\n",
+    "        day_2 = num_students-day_1\n",
+    "        prob_a_given_b = day_2_infected_prob_given_day_1(day_2,day_1)\n",
+    "        prob_a = binom.pmf(k=day_1,n=30,p=.02)\n",
+    "        prob_b = prob_a_given_b*prob_a\n",
+    "        probability_list.append(prob_b)\n",
+    "    return sum(probability_list)\n",
+    "\n",
+    "data = []\n",
+    "for i in range(11):\n",
+    "    expected_day_2 = []\n",
+    "    additional_students_infected = i\n",
+    "    cumulative_probability = cum_prob_day_2(i)\n",
+    "    data.append({'infected_students': additional_students_infected,\n",
+    "                 'probability': cumulative_probability})\n",
+    "    expected_day_2.append(cumulative_probability)\n",
+    "expected_day_2 = pd.DataFrame(data)\n",
+    "expected_day_2['hfx'] = expected_day_2['probability'] * expected_day_2['infected_students']"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    infected_students  probability       hfx\n0                   0     0.297553  0.000000\n1                   1     0.285647  0.285647\n2                   2     0.195743  0.391486\n3                   3     0.115494  0.346483\n4                   4     0.059656  0.238622\n5                   5     0.027537  0.137685\n6                   6     0.011565  0.069388\n7                   7     0.004463  0.031238\n8                   8     0.001591  0.012732\n9                   9     0.000527  0.004739\n10                 10     0.000162  0.001621",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>infected_students</th>\n      <th>probability</th>\n      <th>hfx</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0.297553</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>0.285647</td>\n      <td>0.285647</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>0.195743</td>\n      <td>0.391486</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>0.115494</td>\n      <td>0.346483</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>0.059656</td>\n      <td>0.238622</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5</td>\n      <td>0.027537</td>\n      <td>0.137685</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>6</td>\n      <td>0.011565</td>\n      <td>0.069388</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>7</td>\n      <td>0.004463</td>\n      <td>0.031238</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>8</td>\n      <td>0.001591</td>\n      <td>0.012732</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>9</td>\n      <td>0.000527</td>\n      <td>0.004739</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>10</td>\n      <td>0.000162</td>\n      <td>0.001621</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_day_2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1.5196409932865926"
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_day_2['hfx'].sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2.4593"
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_2_df['infected'].mean()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "For each axis slice, the sum of the observed frequencies must agree with the sum of the expected frequencies to a relative tolerance of 1e-08, but the percent differences are:\n6.288963852577139e-05",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/f3/g1154c6d5hb7y4_s6bzsyw8m0000gn/T/ipykernel_28117/122340225.py\u001B[0m in \u001B[0;36m?\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mchisquare\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mday_2_observed\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'percent'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mexpected_day_2\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'probability'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m~/opt/anaconda3/envs/Pandemic Simulation/lib/python3.10/site-packages/scipy/stats/_stats_py.py\u001B[0m in \u001B[0;36m?\u001B[0;34m(f_obs, f_exp, ddof, axis)\u001B[0m\n\u001B[1;32m   8208\u001B[0m     ...           axis=1)\n\u001B[1;32m   8209\u001B[0m     \u001B[0mPower_divergenceResult\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mstatistic\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m3.5\u001B[0m \u001B[0;34m,\u001B[0m \u001B[0;36m9.25\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpvalue\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0.62338763\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m0.09949846\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   8210\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   8211\u001B[0m     \"\"\"  # noqa: E501\n\u001B[0;32m-> 8212\u001B[0;31m     return power_divergence(f_obs, f_exp=f_exp, ddof=ddof, axis=axis,\n\u001B[0m\u001B[1;32m   8213\u001B[0m                             lambda_=\"pearson\")\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/Pandemic Simulation/lib/python3.10/site-packages/scipy/stats/_stats_py.py\u001B[0m in \u001B[0;36m?\u001B[0;34m(f_obs, f_exp, ddof, axis, lambda_)\u001B[0m\n\u001B[1;32m   8005\u001B[0m                    \u001B[0;34mf\"frequencies must agree with the sum of the \"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   8006\u001B[0m                    \u001B[0;34mf\"expected frequencies to a relative tolerance \"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   8007\u001B[0m                    \u001B[0;34mf\"of {rtol}, but the percent differences are:\\n\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   8008\u001B[0m                    f\"{relative_diff}\")\n\u001B[0;32m-> 8009\u001B[0;31m             \u001B[0;32mraise\u001B[0m \u001B[0mValueError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmsg\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   8010\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   8011\u001B[0m     \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   8012\u001B[0m         \u001B[0;31m# Ignore 'invalid' errors so the edge case of a data set with length 0\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mValueError\u001B[0m: For each axis slice, the sum of the observed frequencies must agree with the sum of the expected frequencies to a relative tolerance of 1e-08, but the percent differences are:\n6.288963852577139e-05"
+     ]
+    }
+   ],
+   "source": [
+    "chisquare(day_2_observed['percent'],expected_day_2['probability'])"
    ],
    "metadata": {
     "collapsed": false
